# pip-tools

./: .appveyor.yml  .bandit  .checks.yml  .codecov.yml  .coveragerc  .flake8  .fussyfox.yml  .git_archival.txt  .gitattributes  .gitignore  .pipignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc.yaml  .pymarkdown.yml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  codecov.yml  dev-requirements.txt  pip-review  pip_review.py  pyproject.toml  requirements.txt  run-tests.sh  setup.cfg  setup.py  test-requirements.txt  towncrier.toml  tox.ini
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  chronographer.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  cron.yml  deploy.yml  labels.yml  pythonpackage.yml  qa.yml  release-drafter.yml  release.yml  reusable-qa.yml  workflow.yml
changelog.d/: +12e236cf.contrib.md  +3148a12a.contrib.md  +380ef8d4.contrib.md  +3b4b8aec.bugfix.md  +96cdce2b.contrib.md  +97e08771.doc.md  +9da8d07a.breaking.md  +e53eb3b6.contrib.md  +e80f21b6.doc.md  +fcb3437a.contrib.md  +shell_completions.doc.md  .draft_changelog_partial.md  .gitignore  .towncrier_template.md.jinja  1142.feature.md  1669.bugfix.md  1702.doc.md  1987.bugfix.md  2062.feature.md  2082.bugfix.md  2083.bugfix.md  2087.bugfix.md  2106.feature.md  2110.bugfix.md  2131.breaking.md  2142.contrib.md  2146.contrib.md  2149.packaging.md  2150.bugfix.md  2175.feature.md  2176.bugfix.md  2178.bugfix.md  2188.feature.md  2195.breaking.md  2195.feature.1.md  2195.feature.2.md  2201.contrib.md  2202.contrib.md  2203.contrib.md  2209.packaging.md  (+63 more)
docs/: .gitignore  changelog.md  conf.py  contributing.md  contributing.rst  index.md  index.rst  requirements.in  requirements.txt  utils.py
docs/_static/: custom.css
docs/cli/: index.md  pip-lock.md
docs/cli-reference/: index.md
docs/explanation/: build-system-integration.md  caching.md  comparison.md  cross-environment.md  deprecations.md  how-pip-compile-works.md  index.md  reproducibility.md  resolvers.md  stable-output.md  strip-extras-and-constraints.md  unsafe-packages.md
docs/how-to/: compile-build-deps.md  compile-from-pyproject.md  compile-from-requirements-in.md  compile-from-stdin.md  custom-compile-command.md  customize-compiled-headers.md  customize-output.md  forward-pip-args.md  index.md  install.md  layered-requirements.md  migrate-off-legacy-resolver.md  private-indexes.md  shell-completions.md  sync-environment.md  sync-interactive.md  sync-other-env.md  system-packages.md  time-travel-builds.md  update-dependencies.md  use-hashes.md  use-with-pre-commit.md  vcs-and-url-deps.md
docs/reference/: cli.rst  config-file.md  configuration.md  cross-environment.md  environment-variables.md  index.md  output-file.md  pip-compile.md  pip-sync.md  sync-ignore-list.md
docs/source/: conf.py  index.rst
docs/tutorial/: getting-started.md
examples/: django.in  flask.in  hypothesis.in  protection.in  sentry.in
examples/readme/: constraints.txt  pyproject.toml
pip_refresh/: __init__.py
pip_refresh/scripts/: pip_refresh.py
pip_review/: __init__.py  __main__.py
pip_review/scripts/: pip_review.py
pip_tools/: review.py
pip_tools/scripts/: pip_dump.py  pip_review.py
piptools/: __init__.py  __main__.py  _compat.py  build.py  cache.py  click.py  datastructures.py  dependency_groups.py  exceptions.py  io.py  locations.py  lock.py  logging.py  package_manager.py  pip.py  pypi.py  resolver.py  subprocess_utils.py  sync.py  utils.py  version.py  writer.py
piptools/_compat/: __init__.py  _tomllib_compat.py  click.py  click_compat.py  contextlib.py  importlib_metadata.py  path_compat.py  pip_compat.py  pipfile_compat.py  tempfile.py  tempfile_compat.py  tomllib.py  typing.py
piptools/_internal/: _dependency_groups.py  _pip_caches.py
piptools/_pip_api/: __init__.py  install_requirements.py  version.py
piptools/_vendored/: README.rst
piptools/commands/: review.py
piptools/pylock/: __init__.py  _hashes.py  _inputs.py  _marker_ast.py  _marker_eval.py  _marker_patch.py  _merge.py  _urls.py  builder.py  config.py  markers.py  platforms.py  redact.py  tool_block.py  validate.py
piptools/repositories/: __init__.py  _hash_cache.py  base.py  local.py  minimal_upgrade.py  pypi.py
piptools/scripts/: _compile_parser.py  _deprecations.py  _repo.py  check.py  compile.py  lock.py  options.py  review.py  snapshot.py  sync.py  types.py  urls.py
plugins/coverage/: piptools_coverage.py
requirements/: docs.txt
tests/: __init__.py  conftest.py  constants.py  defaults.t  dump-to-multiple-req-files.t  dump.t  info.t  multiple.txt  new-packages.t  pip-compile-allows-inheritance.t  pip-compile-detailed.t  pip-compile-pinned.t  pip-compile-specifics.t  pip-compile-works-with-vcs.t  pip-compile.t  pip-freeze-new.t  pip-freeze-old.t  review.t  setup.sh  single.t  test_auto_rerun_net_tests.py  test_build.py  test_cache.py  test_circular_imports.py  test_cli.py  test_cli_check.py  test_cli_compile.py  test_cli_sync.py  test_compat.py  test_compat_pipfile.py  test_conftest_branches.py  test_fake_index.py  test_hash_cache.py  test_io.py  test_local_coverage_plugin.py  test_locations.py  test_lock.py  test_logging.py  test_minimal_upgrade.py  test_pip_caches.py  (+12 more)
tests/__pycache__/: test_cli_compile.cpython-312-pytest-8.2.2.pyc.20944  test_resolver.cpython-312-pytest-8.2.2.pyc.10476  test_utils.cpython-312-pytest-8.2.2.pyc.10476
tests/fixtures/: fake-editables.json  fake-index.json
tests/pip_api/: test_install_requirements.py  test_version.py
tests/pylock/: conftest.py  test_builder.py  test_config.py  test_init.py  test_marker_ast.py  test_marker_eval.py  test_markers.py  test_merge.py  test_platforms.py  test_redact.py  test_tool_block.py  test_urls.py  test_validate.py  test_writer.py
tests/scripts/: test_lock.py
tests/test_data/: check_module_not_importable.py  fake-editables.json  fake-index.json  writelines.py
(+90 files in other folders)
