[metadata]
name = pip-tools
url = https://github.com/jazzband/pip-tools/
license = BSD
author = Vincent Driessen
author_email = me@nvie.com
description = pip-tools keeps your pinned dependencies fresh.
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: System :: Systems Administration

[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
setup_requires = setuptools_scm
packages = find:
zip_safe = false
install_requires =
    click >= 7
    pip >= 20.1

[options.packages.find]
exclude = tests

[options.extras_require]
testing =
    mock
    pytest
    pytest-rerunfailures
coverage = pytest-cov

[options.entry_points]
console_scripts =
    pip-compile = piptools.scripts.compile:cli
    pip-sync = piptools.scripts.sync:cli

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = .* build dist venv test_data piptools/_compat/*
testpaths = tests piptools
filterwarnings =
    always
    ignore::PendingDeprecationWarning:pip\._vendor.+
    ignore::DeprecationWarning:pip\._vendor.+
markers =
    network: mark tests that require internet access

[flake8]
max-line-length = 88
extend-ignore = E203  # E203 conflicts with PEP8; see https://github.com/psf/black#slices

# flake8-pytest-style
# PT001:
pytest-fixture-no-parentheses = true
# PT006:
pytest-parametrize-names-type = tuple
# PT007:
pytest-parametrize-values-type = tuple
pytest-parametrize-values-row-type = tuple

[isort]
profile = black
