[metadata]
name = pip-tools
url = https://github.com/jazzband/pip-tools/
license = BSD 3 Clause
author = Vincent Driessen
author_email = me@nvie.com
description = pip-tools keeps your pinned dependencies fresh.
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: System :: Systems Administration
    Typing :: Typed

[options]
python_requires = >=3.7
setup_requires = setuptools_scm
packages = find:
zip_safe = false
install_requires =
    # direct dependencies
    build
    click >= 7
    pip >= 21.2
    # indirect dependencies
    setuptools  # typically needed when pip-tools invokes setup.py
    wheel  # pip plugin needed by pip-tools

[options.packages.find]
exclude = tests

[options.package_data]
piptools = py.typed

[options.extras_require]
testing =
    pytest
    pytest-rerunfailures
    pytest-xdist
coverage = pytest-cov

[options.entry_points]
console_scripts =
    pip-compile = piptools.scripts.compile:cli
    pip-sync = piptools.scripts.sync:cli

[tool:pytest]
addopts =
    # `pytest-xdist`:
    --numprocesses=auto
norecursedirs = .* build dist venv test_data piptools/_compat/*
testpaths = tests piptools
filterwarnings =
    always
markers =
    network: mark tests that require internet access

[flake8]
max-line-length = 100
extend-ignore = E203  # E203 conflicts with PEP8; see https://github.com/psf/black#slices

# flake8-pytest-style
# PT001:
pytest-fixture-no-parentheses = true
# PT006:
pytest-parametrize-names-type = tuple
# PT007:
pytest-parametrize-values-type = tuple
pytest-parametrize-values-row-type = tuple
# PT023:
pytest-mark-no-parentheses = true

[isort]
profile = black
add_imports = from __future__ import annotations

[mypy]
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

# Avoid error: Duplicate module named 'setup'
# https://github.com/python/mypy/issues/4008
exclude = ^tests/test_data/

[mypy-tests.*]
disallow_untyped_defs = false
